--- a/AudioManip/res/layout/fragment_main.xml
+++ b/AudioManip/res/layout/fragment_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/sound_wave"
+    android:gravity="bottom|right|center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,57 +12,71 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sathyaproject.MainActivity$PlaceholderFragment" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Let&apos;s Begin"
+        android:textColor="#00ccff"
+        android:textSize="23sp" />
+
+    <Spinner
+        android:id="@+id/spinner1"
+        style="@style/Widget.AppCompat.Base.DropDownItem.Spinner"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:gravity="top"
+        tools:listitem="@android:layout/simple_list_item_multiple_choice" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.21"
+        android:gravity="top"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom" >
+
+            <ImageButton
+                android:id="@+id/imageButton2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/rec" />
+
+            <ImageButton
+                android:id="@+id/imageButton1"
+                android:layout_width="80dp"
+                android:layout_height="79dp"
+                android:paddingTop="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/play" />
+
+            <ImageButton
+                android:id="@+id/imageButton3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:baselineAlignBottom="@bool/abc_split_action_bar_is_narrow"
+                android:scaleType="centerCrop"
+                android:src="@drawable/pause" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-        
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Let's Begin"
-            android:textSize="23sp" 
-            android:textColor="#00ccff"
-            />
-        
-
-        <!-- <Spinner
-            android:id="@+id/songChoiceSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />-->
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <ImageButton
-            android:id="@+id/recordButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/abc_ic_voice_search" 
-            android:onClick="onClick" />
-
-        <ImageButton
-            android:id="@+id/playButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/abc_ic_go"
-            android:onClick="onClick" />
-
-        <ImageButton
-            android:id="@+id/pauseButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/abc_ic_clear"
-            android:onClick="onClick" />
-
-    </LinearLayout>
+    </LinearLayout>-->
 
 </LinearLayout>
