--- a/AudioManip/res/layout/fragment_main.xml
+++ b/AudioManip/res/layout/fragment_main.xml
@@ -42,34 +42,21 @@
             android:gravity="bottom" >
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/recButton"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/rec" />
+                android:src="@drawable/rec"
+                android:onClick="@drawable/pause" />
 
             <ImageButton
-                android:id="@+id/imageButton1"
+                android:id="@+id/playButton"
                 android:layout_width="80dp"
                 android:layout_height="79dp"
                 android:paddingTop="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/play" />
-
-            <ImageButton
-                android:id="@+id/imageButton3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:baselineAlignBottom="@bool/abc_split_action_bar_is_narrow"
-                android:scaleType="centerCrop"
-                android:src="@drawable/pause" />
+                android:src="@drawable/play"/>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
 
     </LinearLayout>
 
