--- a/AudioManip/res/layout/fragment_main.xml
+++ b/AudioManip/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/sound_wave"
-    android:gravity="bottom|right|center"
+    android:gravity="top|center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -17,45 +17,68 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Let&apos;s Begin"
+        android:text="Audio Manipulation"
         android:textColor="#00ccff"
-        android:textSize="23sp" />
+        android:textSize="30sp"
+        android:shadowColor="@color/LightBlue"
+        android:shadowDx="6"
+        android:shadowDy="6"
+        android:shadowRadius="6"
+        />
 
     <Spinner
         android:id="@+id/spinner1"
         style="@style/Widget.AppCompat.Base.DropDownItem.Spinner"
         android:layout_width="match_parent"
         android:layout_height="38dp"
+        android:layout_weight="0.02"
         android:gravity="top"
-        tools:listitem="@android:layout/simple_list_item_multiple_choice" />
+        tools:listitem="@android:layout/simple_list_item_multiple_choice"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"  />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_weight="0.02"
+        android:gravity="top"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
+
+    <MediaController
+        android:id="@+id/mediaController1"
+        android:layout_width="wrap_content"
+        android:layout_height="74dp" >
+    </MediaController>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.21"
-        android:gravity="top"
+        android:gravity="bottom"
         android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom" >
+            android:gravity="bottom|center_horizontal" >
 
             <ImageButton
                 android:id="@+id/recButton"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/rec"
                 android:onClick="@drawable/pause" />
 
             <ImageButton
                 android:id="@+id/playButton"
-                android:layout_width="80dp"
-                android:layout_height="79dp"
-                android:paddingTop="0dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/play"/>
+                android:src="@drawable/play" />
+
         </LinearLayout>
 
     </LinearLayout>
