--- a/AudioManip/res/layout/splash.xml
+++ b/AudioManip/res/layout/splash.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/lights"
+    android:background="@drawable/streak"
     android:orientation="vertical" >
 
     <TextView
@@ -21,8 +21,6 @@
         android:shadowRadius="6"
         android:text="HELLO"
         android:textColor="@color/MediumSlateBlue"
-        android:textSize="83sp"
-        android:textStyle="bold|italic"
-        android:typeface="normal" />
+        android:textSize="83sp"/>
 
 </LinearLayout>
